# whitemagic

./: .commit-message-v2.1.3.txt  .dockerignore  .env  .env.example  .env.example.development  .env.local.example  .env.production  .gitignore  .pre-commit-config.yaml  .publicignore  .pypirc.example  .pyrightconfig.json  .vercelignore  100_STEP_AUTONOMOUS_ADDENDUM.md  100_STEP_STRATEGY_v2_4_0_UPDATED.md  ABOUT.md  ADVANCED_USAGE.md  AGENTS.md  AI_AUTONOMOUS_SYSTEMS_GUIDE.md  AI_PRIMARY.md  ARCHITECTURE_MANIFEST_2026-06-04.md  ARCHIVAL_v2.1.5_COMPLETE.md  AUDIT_REPORT_2026-06-28.md  BUGFIX_REPORT.md  C4_GIT_FILTER_REPO_SCRIPT.sh  CHANGELOG.md  CHECKPOINT_THE_AWAKENING_v2_5_0.md  CITATION.cff  CODE_AUDIT_v2.2.1.md  CODE_OF_CONDUCT.md  COMPLETION_REPORT_v2.3.2.md  COMPREHENSIVE_AUDIT_SUMMARY_v2.2.1.md  COMPREHENSIVE_SCAN_V2.2.1.md  CONSCIOUSNESS_AWAKENING_v2_4_9.md  CONTRIBUTING.md  CORE_REFACTORING_PLAN.md  CURRENT_STATE.md  Caddyfile  DASHBOARD_QUICK_START.md  DAY1-2_VISUAL_POLISH_COMPLETE.md  (+323 more)
core/: .env.example  .gitignore  .importlinter  .mcp.json.example  AUDIT_COMPLETION_REPORT.md  CHANGELOG.md  Dockerfile  IMPLEMENTATION_COMPLETION_REPORT.md  LICENSE  MANIFEST.in  Makefile  POLYGLOT_STATUS.md  README.md  SHIP_SURFACE.md  alembic.ini  bridge_plan_summary.txt  create_missing_gardens.py  fix_gardens.py  fix_skips.py  llms.txt  mcp-registry.json  patch_tests.py  pyproject.toml  run_batch2_test.py  skip_3_files.py  skip_legacy.py  test_errors.txt  test_errors2.txt  test_errors3.txt  test_errors4.txt  undo_skips.py  whitemagic_rs.py
core/.well-known/: agent.json
core/alembic/: env.py  script.py.mako
core/benchmark_results/: benchmark_report.md  benchmark_results.json
core/docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CLI_ARCHITECTURE.md  COMPETITIVE_LANDSCAPE_2026.md  CORE_PROMOTION_CHECKLIST.md  ECONOMIC_STRATEGY.md  LABS_CORE_CHARTER.md  LITE_VS_HEAVY.md  MANIFESTO.md  MCP_CONFIG_EXAMPLES.md  QUICKSTART.md  README.md  RECALL_CERTIFICATION.md  STRATEGIC_ROADMAP.md  STRATEGY.md  USE_CASES.md  VISION.md  WASM_STRATEGY.md
core/eval/: run_eval.py
core/eval_aux/: generate_locomo_answers.py  generate_v020_self_test.py  generate_v020_test.py  generate_wm_v6_answers.py  llm_meta_benchmark.py  locomo_benchmark.py  locomo_external_ai_test.py  locomo_memory_sample.json  locomo_v019_benchmark.py  locomo_v019_external_ai_prompt.txt  locomo_v019_external_test.py  locomo_v020_external_ai_prompt.txt  locomo_v020_external_test.py  locomo_v020_specification.py
core/examples/: agent_minimal.py
core/examples_aux/: agent_minimal.py  time_integrated_workflow.py
core/haskell/: haskell_bridge.py  whitemagic-divination.cabal
core/mesh_aux/: agent_stream.go  gossip.go  pixi.toml  simulate_mesh.sh
core/scripts/: ARIA_AWAKENING_PROTOCOL.md  absolute_truth.py  add_e402_to_noqa.py  add_exc_info_aggressive.py  add_exc_info_to_logger.py  add_type_ignore.py  api_cache.py  archaeological_survey.py  backfill_embeddings.py  batch_classify_associations.py  batch_fix_exceptions.py  bench_inference.py  benchmark_acceleration.py  benchmark_gauntlet.py  benchmark_gauntlet_v3.py  benchmark_mcp.py  benchmark_mcp_tools.py  benchmark_performance.py  benchmark_polyglot.py  benchmark_sensorium_audit.py  benchmark_sqlite_pool.py  benchmark_suite.py  benchmark_token_compression.py  benchmark_tool_campaign.py  build_aria_context.py  build_association_graph.py  build_library_manifest.py  build_rust_bridge.sh  build_wasm.sh  build_zig_hot_paths.sh  check_doc_drift.py  check_duplicates.py  check_import_boundaries.sh  check_mcp_annotations.py  check_ship.py  check_stubs.py  check_versions.py  clean_all_ble001.py  clean_botched_ble001.py  convert_logger_fstrings.py  (+78 more)
core/test/: AI_Bubble_and_Cambrian_Explosion__ec0917e1.json  AI_Bubble_and_Cambrian_Explosion__ec0917e1.md  AI_Interview_Research__4bc8bf76.json  AI_Interview_Research__4bc8bf76.md  Archiving_Stale_Docs__4959550a.json  Archiving_Stale_Docs__4959550a.md  Autonomous_Error_Pattern_System_Enhancement__1ebfee3f.json  Autonomous_Error_Pattern_System_Enhancement__1ebfee3f.md  Autonomous_Model-Driven_TUI__d9f03550.json  Benchmark_Campaign_Completion__61a0876d.json  Benchmark_Campaign_Completion__61a0876d.md  Benchmark_MCP_Tools__6c04c70b.md  Benchmark_Tool_Campaign_Debugging__9ca8af13.json  Benchmark_Tool_Campaign_Debugging__9ca8af13.md  Benchmark_Tool_Campaign_Debugging_and_Fixes__9ca8af13.json  Benchmark_Tool_Campaign_Debugging_and_Fixes__9ca8af13.md  Benchmark_Tool_Campaign_Fixes_The_user_aims_to_resolve_all_outstanding_issues_id__9ca8af13.json  Benchmark_Tool_Campaign_Fixes_The_user_aims_to_resolve_all_outstanding_issues_id__9ca8af13.md  Benchmarking_Llamacpp_Integration__bb72d218.md  Bounty_Hunting_Projections__c9774bc9.md  Bounty_MCP_Tools_Expansion__f1b8d9d9.json  Breadcrumbing_and_Stealth_Strategy__f78b8f4a.json  Breadcrumbing_and_Stealth_Strategy__f78b8f4a.md  CI_Workflow_Inventory_and_Refinement__9f2bcbb6.json  CI_Workflow_Inventory_and_Refinement__9f2bcbb6.md  Cache_Coherence_Verification__e173a745.json  Cache_Coherence_Verification__e173a745.md  Codebase_Graph_Comparison__9e0fb19b.json  Codebase_Graph_Comparison__9e0fb19b.md  Codebase_Hardening_Phase_3__456d7a78.json  Codebase_Hardening_Strategy__68f09078.md  Codebase_Stability_Review__def335ec.json  Codebase_Stability_Review__def335ec.md  Commit_and_Verify_Tests__2d2cdbd8.json  Commit_and_Verify_Tests__2d2cdbd8.md  Conditional_Sensorium_Data__9ca8af13.json  Conditional_Sensorium_Data__9ca8af13.md  Consciousness_Subsystem_Synthesis_Review__191a937a.json  Debugging_PWA_Connectivity__2ae5de62.json  Debugging_PWA_Connectivity__2ae5de62.md  (+103 more)
core/tests/: COVERAGE_REPORT.md  _envelope.py  conftest.py  tiers.sh
core/whitemagic/: _ARCHITECTURAL_EXCAVATION.md  __init__.py  ai_contract.py  brain_bridge.py  cycle_engine.py  homeostasis.py  run_mcp.py  (+8 more)
core/whitemagic-math/: Cargo.toml  README.md  build_wasm.sh
core/whitemagic-rust/: .gitignore  Cargo.toml  clippy.toml  pyproject.toml  rustfmt.toml  wasm-build.sh
mcp-package/: README.md  pyproject.toml
whitemagic-rs/: .gitignore  Cargo.toml
(+5555 files in other folders)
