[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whitemagic"
version = "2.1.0"
description = "Tiered memory management system for AI agents with native MCP support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "WhiteMagic Contributors"}
]
keywords = ["memory", "ai", "mcp", "context", "llm", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/whitemagic"
Documentation = "https://github.com/your-org/whitemagic#readme"
Repository = "https://github.com/your-org/whitemagic"
"Bug Tracker" = "https://github.com/your-org/whitemagic/issues"

[project.scripts]
whitemagic = "cli:main"

[tool.setuptools]
packages = ["whitemagic", "whitemagic.api", "whitemagic.api.routes"]

[tool.setuptools.package-data]
whitemagic = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
