[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whitemagic"
version = "2.1.5"
description = "Tiered memory management system for AI agents with native MCP support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "WhiteMagic Contributors"}
]
keywords = ["memory", "ai", "mcp", "context", "llm", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.0.0",  # Required for pydantic EmailStr validation
    # API Framework (required for production)
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    # Database (required for production)
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Caching & Rate Limiting (required for production)
    "redis>=5.0.1",
    # HTTP Client
    "httpx>=0.25.0",
    # AI/Embeddings (OpenAI for API, local optional)
    "openai>=1.3.0",
    "numpy>=1.24.0",
    # NOTE: sentence-transformers and torch moved to optional-dependencies[embeddings]
    # This keeps Railway deployments lightweight (<500MB vs 8.5GB)
    # Logging
    "python-json-logger>=2.0.7",
    # YAML parsing
    "pyyaml>=6.0.0",
    # Rich CLI formatting
    "rich>=13.0.0",
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.6",
    "openai>=1.0.0",
]

api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "numpy>=1.24.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "httpx>=0.25.0",
    "python-json-logger>=2.0.7",
    "pyyaml>=6.0.0",  # Required for semantic search markdown frontmatter parsing
]

embeddings = [
    # Local embeddings support (privacy-first, offline)
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    # For enhanced local embeddings (optional)
    "scipy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/lbailey94/whitemagic"
Documentation = "https://github.com/lbailey94/whitemagic#readme"
Repository = "https://github.com/lbailey94/whitemagic"
"Bug Tracker" = "https://github.com/lbailey94/whitemagic/issues"

[project.scripts]
whitemagic = "whitemagic.cli_app:main"

[tool.setuptools]
packages = ["whitemagic", "whitemagic.api", "whitemagic.api.routes"]

[tool.setuptools.package-data]
whitemagic = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
