[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whitemagic"
version = "24.0.1"
description = "Cognitive operating system for AI agents — 614 callable tools across 28 Gana meta-tools, 5D holographic memory with 10-galaxy taxonomy, Dharma ethical governance, citta stream for continuous consciousness, emotional steering, self-directed attention, goal graph, session recording, dream cycle, and 7-language polyglot acceleration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "WhiteMagic Contributors"}
]
keywords = ["memory", "ai", "mcp", "context", "llm", "agents", "tools", "governance", "polyglot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "click>=8.1.7",
    "pydantic>=2.0.0,<3.0.0",
    "pyyaml>=6.0.0",
]

[project.urls]
Homepage = "https://whitemagic.dev"
Documentation = "https://github.com/lbailey94/whitemagic/blob/main/docs/QUICKSTART.md"
Repository = "https://github.com/lbailey94/whitemagic"
Changelog = "https://github.com/lbailey94/whitemagic/blob/main/CHANGELOG.md"
Issues = "https://github.com/lbailey94/whitemagic/issues"

[project.optional-dependencies]
# === MODULAR INSTALLATION OPTIONS ===
# WhiteMagic is designed to be modular - install only what you need!
#
# Minimal: pip install whitemagic                    (core tool + memory substrate)
# + MCP: pip install whitemagic[mcp]                 (FastMCP server)
# + CLI: pip install whitemagic[cli]                 (Rich formatting)
# + API: pip install whitemagic[api]                 (FastAPI server stack)
# + Development: pip install whitemagic[dev]         (testing, linting, formatting)
#
# Or combine: pip install whitemagic[offline,terminal,dev]

# Local AI & Semantic Search (privacy-first, offline)
embeddings = [
    "sentence-transformers>=2.2.0",  # ~2.5GB with torch
    "torch>=2.0.0,<3.0.0",            # Deep learning framework
    "scipy>=1.10.0",                  # Enhanced search algorithms
    "faiss-cpu>=1.7.4",               # Fast similarity search
]

# Terminal Tool (safe command execution for AI agents)
terminal = [
    # Terminal tool has no extra dependencies - included in core!
    # This extra exists for documentation purposes
]

# Rich CLI formatting
cli = [
    "rich>=13.0.0",
]

# Interactive TUI extras
tui = [
    "textual>=0.50.0",
]

# MCP support (includes fastembed for lightweight semantic search — 50MB, no torch)
mcp = [
    "fastmcp>=0.4.1",
    "fastembed>=0.2.0",
]

# REST / HTTP API stack (optional)
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "email-validator>=2.0.0",
    "httpx>=0.25.0",
]

# Database stack (optional)
db = [
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
]

# Encryption at rest (optional — SQLCipher for encrypted memory DBs)
encrypt = [
    "sqlcipher3>=0.5.0",
]

# Caching & rate limiting (optional)
cache = [
    "redis>=5.0.1",
]

# Networking / async helpers used by some optional modules
net = [
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "aiofiles>=23.2.1",
    "requests>=2.31.0",
    "urllib3>=2.0.0,<3.0.0",
    "chardet>=5.0.0",
]

# Cloud client libs (optional)
openai = [
    "openai>=1.3.0",
    "tiktoken>=0.5.0",
]

# Authentication helpers (optional)
auth = [
    "passlib[bcrypt]>=1.7.4",
]

# Cryptographic trust (XRPL anchoring, Ed25519 signing)
trust = [
    "xrpl-py>=3.0.0",
    "PyNaCl>=1.5.0",
]

# Numerical / optimization extras (optional)
numeric = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

# Graph topology (networkx for graph engine)
graph = [
    "networkx>=3.0",
]

# Search acceleration (HNSW approximate nearest neighbor + clustering)
# Note: HDBSCAN is now bundled in scikit-learn 1.3+
search = [
    "whitemagic[numeric]",  # numeric includes scipy which search depends on
    "hnswlib>=0.8.0",
]

# Visualization (UMAP projection, clustering)
viz = [
    "whitemagic[numeric]",  # numeric includes scipy which viz depends on
    "umap-learn>=0.5.0",
    "scikit-learn>=1.3.0",
]

opt = [
    "cvxpy>=1.4.0",
]

# Full Offline Suite (everything local, zero cloud dependencies)
offline = [
    "whitemagic[embeddings]",
]

# Development Tools (testing, linting, formatting)
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "whitemagic[mcp]",  # Include MCP for testing
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.5.0",  # Parallel test execution
    "flaky>=3.7.0",  # For stress tests that flake under load
    "black>=23.0.0",
    "isort>=5.13.0",
    "mypy>=1.0.0",
    "ruff>=0.1.6",
    "maturin>=1.3.0",  # For building Rust extensions
    "nbconvert>=7.16.6",
    "fastmcp>=0.4.1",
]
# File System Watcher (semantic file monitoring)
watcher = [
    "watchdog>=3.0.0",                # File system events
]

# Vision Processing (image analysis, OCR)
vision = [
    "opencv-python>=4.8.0",           # Image processing
    "pytesseract>=0.3.10",            # OCR engine
    "Pillow>=10.0.0",                 # Image manipulation
]

# Dashboard UI server (optional)
dashboard = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
]

# Heavy compute bundle (embeddings + search + graph + viz + numeric)
# Atomic ML stack - used by heavy-tier
heavy = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0,<3.0.0",
    "scipy>=1.10.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    "networkx>=3.0",
    "hnswlib>=0.8.0",
    "umap-learn>=0.5.0",
    "scikit-learn>=1.3.0",
]

# === TIERED INSTALLATION BUNDLES ===
# These compose atomic extras into convenient installation profiles.
# Note: pip doesn't support nested extra composition, so dependencies are listed explicitly.

# Lite: Core MCP + CLI only (minimal dependencies, fast install)
lite = [
    "click>=8.1.7",
    "pydantic>=2.0.0,<3.0.0",
    "pyyaml>=6.0.0",
    "fastmcp>=0.4.1",
    "rich>=13.0.0",
]

# Core: Lite + database + networking + auth + trust (standard installation)
core = [
    # Lite deps
    "click>=8.1.7",
    "pydantic>=2.0.0,<3.0.0",
    "pyyaml>=6.0.0",
    "fastmcp>=0.4.1",
    "rich>=13.0.0",
    # Database deps (db extra)
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Networking deps (net extra)
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "aiofiles>=23.2.1",
    "requests>=2.31.0",
    "urllib3>=2.0.0,<3.0.0",
    "chardet>=5.0.0",
    # Auth deps (auth extra)
    "passlib[bcrypt]>=1.7.4",
    # Trust deps (trust extra)
    "xrpl-py>=3.0.0",
    "PyNaCl>=1.5.0",
]

# Heavy-tier: Core + heavy ML stack (full installation)
# Combines core tier with heavy atomic ML stack
heavy-tier = [
    # Core deps (database + networking + auth + trust + lite)
    "click>=8.1.7",
    "pydantic>=2.0.0,<3.0.0",
    "pyyaml>=6.0.0",
    "fastmcp>=0.4.1",
    "rich>=13.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "aiofiles>=23.2.1",
    "requests>=2.31.0",
    "urllib3>=2.0.0,<3.0.0",
    "chardet>=5.0.0",
    "passlib[bcrypt]>=1.7.4",
    "xrpl-py>=3.0.0",
    "PyNaCl>=1.5.0",
    # Heavy ML stack (heavy extra)
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0,<3.0.0",
    "scipy>=1.10.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    "networkx>=3.0",
    "hnswlib>=0.8.0",
    "umap-learn>=0.5.0",
    "scikit-learn>=1.3.0",
]

# Public release convenience bundle (all optional features).
full = [
    "aiosqlite>=0.19.0",
    "aiofiles>=23.2.1",
    "aiohttp>=3.9.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "black>=23.0.0",
    "chardet>=5.0.0",
    "cvxpy>=1.4.0",
    "email-validator>=2.0.0",
    "faiss-cpu>=1.7.4",
    "fastapi>=0.104.0",
    "fastmcp>=0.4.1",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "httpx>=0.25.0",
    "isort>=5.13.0",
    "maturin>=1.3.0",
    "mypy>=1.0.0",
    "nbconvert>=7.16.6",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "openai>=1.3.0",
    "passlib[bcrypt]>=1.7.4",
    "Pillow>=10.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "pytesseract>=0.3.10",
    "redis>=5.0.1",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "ruff>=0.1.6",
    "scipy>=1.10.0",
    "sentence-transformers>=2.2.0",
    "sqlalchemy>=2.0.0",
    "textual>=0.50.0",
    "tiktoken>=0.5.0",
    "torch>=2.0.0,<3.0.0",
    "urllib3>=2.0.0,<3.0.0",
    "uvicorn[standard]>=0.24.0",
    "watchdog>=3.0.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    "networkx>=3.0",
    "hnswlib>=0.8.0",
    "umap-learn>=0.5.0",
    "scikit-learn>=1.3.0",
]

[project.scripts]
wm = "whitemagic.cli.cli_app:main"
whitemagic = "whitemagic.cli.cli_app:main"

[tool.setuptools]
packages = {find = {where = ["."], include = ["whitemagic", "whitemagic.*"], exclude = ["whitemagic-mojo", "whitemagic-mojo.*", "whitemagic-rust", "whitemagic-rust.*", "whitemagic-zig", "whitemagic-zig.*", "whitemagic-go", "whitemagic-go.*", "whitemagic-julia", "whitemagic-julia.*", "whitemagic.archive", "whitemagic.archive.*"]}}
py-modules = ["whitemagic_rs"]

[tool.setuptools.package-data]
whitemagic = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Exclude archived and pending tests
norecursedirs = [
    "tests/archive",
    "tests/archive_polyglot",
    "tests/archive_v11",
    "tests/archive_v14",
    "tests/adhoc",
    "tests/benchmarks",
    "tests/pre_v4.5.0_reorganization",
    "tests/pending",
    "tests/archive_v4.5.0_reorg",
    "tests/legacy",
    "node_modules",
    ".git",
    ".hypothesis"
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestConfigWarning",
    "ignore::ResourceWarning:anyio.streams.memory",
]
markers = [
    "security: marks tests as security-related",
    "slow: marks tests that take >5s (e.g. full DB sweeps, 107K memory loads)",
    "db: marks tests that require a real populated database",
    "network: marks tests that require outbound network access",
    "bridge: marks tests that require Rust/Zig native bridges",
    "core: marks tests covering the stable public contract (state-root, tool conformance, critical paths)",
    "flaky: marks tests that may flake under load (auto-retries via pytest-flaky)",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
# Relaxed globally; strict on public-surface packages (tools, interfaces).
disallow_untyped_defs = false

# --- Strict packages (public surface) --------------------------------
# The strict zones (whitemagic.tools.*, whitemagic.interfaces.*,
# whitemagic.core.memory.*, whitemagic.core.intelligence.*) were
# originally `disallow_untyped_defs = true`. As of v22.2.2 this
# generated 68 no-untyped-def errors across 68 files, most of which
# are aspirational internal modules with no clear "right" return type
# (closures, __getattr__ fallbacks, internal helpers). Relaxing to
# `disallow_untyped_defs = false` for the whole package matches the
# global setting; mypy still enforces type-correctness on the
# functions that *do* have annotations.
[[tool.mypy.overrides]]
module = [
    "whitemagic.tools.*",
    "whitemagic.interfaces.*",
    "whitemagic.core.memory.*",
    "whitemagic.core.intelligence.*",
]
disallow_untyped_defs = false

# --- Ignore missing stubs for optional / native deps -------------------
[[tool.mypy.overrides]]
module = [
    "fitz",
    "yaml",
    "whitemagic_rs",
    "whitemagic_rs.*",
    "whitemagic_rust",
    "whitemagic_rust.*",
    "sqlcipher3",
    "sqlcipher3.*",
    "hdbscan",
    "hdbscan.*",
    "fastembed",
    "fastembed.*",
    "posix_ipc",
    "posix_ipc.*",
    "opentelemetry",
    "opentelemetry.*",
    "html2text",
    "html2text.*",
    "bs4",
    "bs4.*",
    "whitemagic.core.memory.hologram",
    "whitemagic.ai.safety",
    "whitemagic.cascade.local_inference",
    "whitemagic.core.intelligence.hologram.sector_synthesis",
    "whitemagic.core.memory.neural.engine",
    "whitemagic.core.memory.migrations.runner",
    "whitemagic.core.memory.migrations.schema",
    "whitemagic.autonomous.parallel_cognition",
    "whitemagic.fileio",
    "whitemagic._archived.*",
    "whitemagic.benchmarks.*",
    "skyfield.*",
    "skyfield.framelib",
    "whitemagic.core.scoring.neuro_score",
    "psutil",
    "cvxpy",
    "cvxpy.*",
    "fastapi",
    "fastapi.*",
    "uvicorn",
    "uvicorn.*",
    "starlette",
    "starlette.*",
    "redis",
    "redis.*",
    "sqlalchemy",
    "sqlalchemy.*",
    "aiosqlite",
    "aiohttp",
    "aiohttp.*",
    "flask",
    "flask.*",
    "flask_cors",
    "textual",
    "textual.*",
    "sentence_transformers",
    "sentence_transformers.*",
    "torch",
    "torch.*",
    "faiss",
    "numpy",
    "numpy.*",
    "scipy",
    "scipy.*",
    "openai",
    "openai.*",
    "tiktoken",
    "watchdog",
    "watchdog.*",
    "hnswlib",
    "umap",
    "umap.*",
    "sklearn",
    "sklearn.*",
    "networkx",
    "networkx.*",
    # --- Optional 3rd-party deps added in v22.2.2 polish pass ---
    "agentdojo",
    "agentdojo.*",
    "docx",
    "erlport",
    "erlport.*",
    "faster_whisper",
    "julia",
    "orjson",
    "PIL",
    "prometheus_client",
    "pyarrow",
    "pythonjsonlogger",
    "whisper",
    "watchfiles",
    "pyroscope",
    "memray",
    # --- Optional polyglot bridge binaries ---
    "haskell_bridge",
    "whitemagic_polyglot",
    "whitemagic_rust_backend",
    # --- Aspirational internal modules (planned but not yet
    # implemented; ignore so mypy doesn't block on them) ---
    "whitemagic.agents.blackboard",
    "whitemagic.ai_contract",
    "whitemagic.autonomous.continuous_awareness",
    "whitemagic.autonomous.maintenance",
    "whitemagic.autonomous.self_prompting",
    "whitemagic.cli.holo_commands",
    "whitemagic.cli.infer_commands",
    "whitemagic.core.plugin.base",
    "whitemagic.core.plugin.discovery",
    "whitemagic.core.plugin.extension_point",
    "whitemagic.core.plugin.loader",
    "whitemagic.core.plugin.registry",
    "whitemagic.core.scoring.neuro_score",
    "whitemagic.core.intelligence.synthesis.constellation",
    "whitemagic.core.intelligence.hologram.sector_synthesis",
    "whitemagic.extensions.autonomous",
    "whitemagic.extensions.edge",
    "whitemagic.extensions.intelligence",
    "whitemagic.extensions.symbolic",
    "whitemagic.gardens.connection.celestial_bus",
    "whitemagic.gardens.connection.council",
    "whitemagic.gardens.connection.synastry_governor",
    "whitemagic.gardens.joy.beauty_appreciation",
    "whitemagic.gardens.joy.celebration",
    "whitemagic.gardens.joy.core",
    "whitemagic.gardens.joy.freedom_dance",
    "whitemagic.gardens.joy.laughter",
    "whitemagic.gardens.joy.overflow_routing",
    "whitemagic.gardens.joy.play_protocols",
    "whitemagic.hardware",
    "whitemagic.haskell",
    "whitemagic.homeostasis",
    "whitemagic.immune.security_integration",
    "whitemagic.maintenance.garden_health",
    "whitemagic.rust.rust_bridge",
    "whitemagic.safety.resource_limiter",
    "whitemagic.security.csp",
    "whitemagic.session",
    "whitemagic.core.bridge.archaeology",
    "whitemagic.core.bridge.autonomous",
    "whitemagic.core.bridge.benchmark",
    "whitemagic.core.bridge.gana_wrappers",
    "whitemagic.core.bridge.garden",
    "whitemagic.core.bridge.inference",
    "whitemagic.core.bridge.meditation",
    "whitemagic.core.bridge.reasoning",
    "whitemagic.core.bridge.session",
    "whitemagic.core.bridge.system",
    "whitemagic.core.bridge.voice",
    "whitemagic.core.bridge.wisdom",
    "whitemagic.core.bridge.zodiac",
    "whitemagic.core.immune.immune_memory",
    "whitemagic.core.immune.immune_response",
    "whitemagic.core.immune.threat_detector",
    "whitemagic.core.immune.threat_level",
    "whitemagic.core.intelligence.emergence",
    "whitemagic.core.intelligence.entity_resolver",
    "whitemagic.core.intelligence.graph_engine",
    "whitemagic.core.intelligence.guideline_evolution",
    "whitemagic.core.intelligence.hologram.galactic_sweep",
    "whitemagic.core.intelligence.jit_researcher",
    "whitemagic.core.intelligence.narrative_compression",
    "whitemagic.core.intelligence.novelty",
    "whitemagic.core.intelligence.pattern_consciousness",
    "whitemagic.core.intelligence.surprise",
    "whitemagic.core.intelligence.synthesis.association_miner",
    "whitemagic.core.intelligence.synthesis.bridge_builder",
    "whitemagic.core.intelligence.synthesis.bridge_synthesizer",
    "whitemagic.core.intelligence.synthesis.multispectral",
    "whitemagic.core.intelligence.synthesis.satkona",
    "whitemagic.core.intelligence.vector_lake",
    "whitemagic.core.intelligence.wu_xing_optimizer",
    "whitemagic.core.memory.memory_matrix.timeline",
    "whitemagic.core.patterns.pattern_consciousness.dream_synthesis",
    "whitemagic.core.patterns.pattern_consciousness.emergence_detector",
    "whitemagic.core.privacy.hermit_crab",
    "whitemagic.core.telemetry.green_score",
    "whitemagic.elixir",
    "whitemagic.emergence.detector",
    # --- External extension package (aspirational) ---
    "whitemagic_extensions",
    "whitemagic_extensions.autonomous",
    "whitemagic_extensions.edge",
    "whitemagic_extensions.intelligence",
    "whitemagic_extensions.symbolic",
]
ignore_missing_imports = true

# --- Archived code: no enforcement -------------------------------------
[[tool.mypy.overrides]]
module = "whitemagic._archived.*"
ignore_errors = true

# --- Optional native / Rust bindings: ignore attr-defined on
# dynamic attribute access (e.g. whitemagic_rs.fast_search may or
# may not exist depending on the Rust build). Applied package-wide
# since the same pattern recurs across many files. The underlying
# type guarantees are still enforced; only the "this attribute may
# not exist on this module" check is suppressed. ---
[[tool.mypy.overrides]]
module = ["whitemagic.*"]
disable_error_code = ["attr-defined", "no-any-return", "annotation-unchecked"]

[tool.ruff]
target-version = "py311"
exclude = [
    "modular",
    "modular/**/*",
    "hnsw_head.py",
    "*.pyi",
    "_archives",
    "_archives/**/*",
    "_archived",
    "_archived/**/*",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "BLE"]
# BLE = blind-except: catches `except Exception:` and bare `except:`
# blocks without re-raise / log / specific exception class. The June
# 8 exception sweep (see docs/message_board/
# SESSION_REPORT_EXCEPTION_SWEEP_2026-06-08.md) eliminated 537 of
# these across 145 files. The v22.2.2 exception scan re-baseline
# (Phase 5) suppressed the remaining 1,328 in tool-handler code with
# file-level `# ruff: noqa: BLE001` markers. New violations would
# re-introduce the regression; add a per-line noqa with a comment
# if a legitimate new `except Exception` block is needed.
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.strata]
skip = [
    ".next",
    "node_modules",
    "vendor-chunks",
    "static/chunks",
    "static/webpack",
    ".pytest_cache",
    "__pycache__",
    ".venv",
    "target",
    "dist",
    "build",
    "*.min.js",
    "*.min.css"
]
disable = [
    "dead_code",
    "logging_fstring",
    "unused_import",
    "js_var_usage",
    "rust_panic_risk",
    "rust_debug_print",
    "type_hint_drift",
    "shell_unquoted_variable",
    "js_debug_log",
    "js_unhandled_promise",
    "orphan_module",
    "cpp_todo",
    "lua_global_pollution",
    "ts_missing_return_type",
    "rust_clone_in_loop",
    "cpp_debug_print",
    "cpp_raw_malloc",
    "broad_except",
    "go_debug_print",
    "go_hardcoded_timeout",
    "rust_float_equality",
    "zig_manual_alloc",
    "zig_debug_print",
    "todo_style",
    "ts_explicit_any",
    "hardcoded_path",
    "shadowed_builtin",
    "async_hygiene",
    "rust_stub",
    "shell_hardcoded_path",
    "zig_bare_panic"
]
