[package]
name = "whitemagic-rs"
version = "0.1.0"
edition = "2021"
authors = ["WhiteMagic Contributors"]
description = "High-performance Rust core for WhiteMagic memory management"
license = "MIT"

[lib]
name = "whitemagic_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
rayon = "1.8"  # Parallel processing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"  # Fast binary serialization
lz4 = "1.24"  # Fast compression
memmap2 = "0.9"  # Memory-mapped files
dashmap = "5.5"  # Concurrent hashmap
tantivy = "0.21"  # Full-text search engine
crossbeam = "0.8"  # Lock-free data structures

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

[[bench]]
name = "consolidation"
harness = false
