[package]
name = "whitemagic-math"
version = "22.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"
lazy_static = "1.4"
kdtree = "0.7"
rand = "0.8"
getrandom = { version = "0.2", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# Feature flags for different targets
[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "console_error_panic_hook", "getrandom/js"]

[profile.release]
opt-level = "s" # Optimize for size
lto = true
codegen-units = 1
panic = "abort"
