[package]
name = "whitemagic-rust"
version = "24.1.0"
edition = "2021"
license = "MIT"
autobins = false

[lib]
name = "whitemagic_rust"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python", "arrow", "iceoryx2"]
iceoryx2 = ["dep:iceoryx2"]
python = ["pyo3", "numpy", "pyo3-build-config", "tokio", "rusqlite", "reqwest", "rayon", "memmap2", "walkdir", "libc", "parking_lot", "tracing", "metrics", "uuid"]
arrow = ["dep:arrow"]
wasm = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook", "getrandom/js", "whitemagic-math/wasm", "wasm-bindgen-futures"]
zig = []  # Zig FFI bridge (optional, requires whitemagic-zig library)

[dependencies]
iceoryx2 = { version = "0.8.1", optional = true }
# Python bindings (optional)
pyo3 = { version = "0.21", optional = true }
numpy = { version = "0.21", optional = true }
arrow = { version = "53.0", optional = true }

# WASM bindings (optional)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "IdbDatabase",
    "IdbFactory",
    "IdbObjectStore",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbVersionChangeEvent",
    "IdbObjectStoreParameters",
    "IdbIndex",
    "IdbCursorWithValue",
    "IdbKeyRange",
    "Window",
    "DomStringList",
] }
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

# SQLite (Python/native only — not WASM-compatible)
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

# HTTP client (Python/native only)
reqwest = { version = "0.11", features = ["json"], optional = true }

# Core dependencies (always included — WASM-safe)
whitemagic-math = { path = "../whitemagic-math" }
ndarray = "0.15"
kdtree = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.2", optional = true }
lazy_static = "1.4"
sha2 = "0.10.9"
regex = "1.10"
uuid = { version = "1.10", features = ["v4"], optional = true }

# Native-only dependencies (not WASM-compatible)
libc = { version = "0.2", optional = true }
rayon = { version = "1.8", optional = true }
memmap2 = { version = "0.9", optional = true }
walkdir = { version = "2.5", optional = true }
parking_lot = { version = "0.12", optional = true }
tracing = { version = "0.1", optional = true }
metrics = { version = "0.22", optional = true }
tokio = { version = "1.35", features = ["full"], optional = true }

[build-dependencies]
pyo3-build-config = { version = "0.21", optional = true }

[profile.release]
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

