cabal-version:      3.0
name:               whitemagic-hs
version:            22.2.0
synopsis:           WhiteMagic Haskell spatial core — functional 5D holographic computations
description:
  Spatial reasoning and category-theoretic operations for WhiteMagic's
  5D holographic coordinate system. Provides FFI bindings for Python
  via the ctypes interface.
license:            MIT
build-type:         Simple

library
  exposed-modules:
    WhiteMagic.Spatial
    WhiteMagic.Holographic
  build-depends:
    base >= 4.16 && < 5,
    vector >= 0.13,
    linear >= 1.22,
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:
    -O2
    -Wall
    -Wcompat
