[package]
name = "codex-chunk"
version = "0.1.0"
edition = "2021"

[dependencies]
codex-core = { path = "../codex-core" }

tokio = { version = "1.35", features = ["fs", "io-util"] }
rayon = "1.8"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-segmentation = "1.10"
regex = "1.10"

# Tokenization (for accurate counting)
tiktoken-rs = { version = "0.5", optional = true }

[features]
default = []
tiktoken = ["dep:tiktoken-rs"]
