[package]
name = "codex-consolidate"
version = "0.1.0"
edition = "2021"

[dependencies]
codex-core = { path = "../codex-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
ndarray = "0.15"
