[package]
name = "codex-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
serde_json = "1.0"
