[package]
name = "codex-embed"
version = "0.1.0"
edition = "2021"

[dependencies]
codex-core = { path = "../codex-core" }

tokio = { version = "1.35", features = ["rt", "time", "fs", "macros"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], optional = true }
ndarray = "0.15"
async-trait = "0.1"
indicatif = "0.17"
fastembed = { version = "4.2", optional = true }

[features]
default = ["local"]
api = ["reqwest"]
local = ["fastembed"]
full = ["api", "local"]
